--- a/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Cart/Select.cshtml
+++ b/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Cart/Select.cshtml
@@ -71,7 +71,7 @@
                     <tbody>
                         @foreach (var listGroup in Model.GroupBy(l => l.ListID))
                         {
-                            var count = @listGroup.Count() - 1;
+                            var count = @listGroup.Count();
                             var firstItem = listGroup.First();
                             CartController cartController = new CartController();
                             <tr>
