--- a/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Cart/SelectList.cshtml
+++ b/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Cart/SelectList.cshtml
@@ -54,8 +54,8 @@
 
         <h2 style="text-align:center;">
             <br /><br />
-            <a href="/Cart/CreateNewList?id=@loggedInUserId" class="button">
-                <button class="btn btn-primary" style="margin-left:20px; margin-right:20px; margin-top:10px;">New List</button>
+            <a href="/Cart/CurrentCart" class="button">
+                <button class="btn btn-primary" style="margin-left:20px; margin-right:20px; margin-top:10px;">Current Cart</button>
             </a>
             <a href="/Cart/Select" class="button">
                 <button class="btn btn-primary" style="margin-left:20px; margin-right:20px; margin-top:10px;">Select / Delete List</button>
@@ -69,7 +69,6 @@
     <div class="container">
         <main role="main" class="pb-3">
             <section id="Table" style="left:0;">
-                <h2 style="text-align:center">List History</h2> <!-- Updated title here -->
                 <table>
                     <thead>
                         <tr>
