CODE DONE -Animated Logo

--- a/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Cart/NewList.cshtml
+++ b/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Cart/NewList.cshtml
@@ -18,10 +18,11 @@
 
             <br /><br />
 
-            <a href="/Cart/CreateNewList?id=@loggedInUserId" class="button"><button class="btn btn-primary" style="margin-left:20px; margin-right:20px; margin-top:10px;">New List </a>
-            <a href="/Cart/Select" class="button"><button class="btn btn-primary" style="margin-left:20px; margin-right:20px; margin-top:10px;" />Select List</a>
-            <a href="/login" class="button"><button class="btn btn-primary" style="margin-left:20px; margin-right:20px; margin-top:10px;" />Delete List</a>
-            <a href="/" class="button"><button class="btn btn-primary" style="margin-left:20px; margin-right:20px; margin-top:10px;" />Add Item</a>
+            <div class="text-center">
+                <a href="/Cart/CurrentCart" class="btn btn-primary mx-2">Current Cart</a>
+                <a href="/Cart/Select" class="btn btn-primary mx-2">Select / Delete List</a>
+                <a href="/" class="btn btn-primary mx-2">Add Item</a>
+            </div>
         </h2>
     </div>
 
