--- a/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Auth/Login.cshtml
+++ b/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Auth/Login.cshtml
@@ -49,7 +49,7 @@
             </div>
 
             User: newuser@example.com<br />
-            Password: Test
+            Password: Test123$
         </form>
     </div>
 </div>
