--- a/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Cart/Select.cshtml
+++ b/ICTPRG535-556/ICTPRG535-556/ICTPRG535-556/Views/Cart/Select.cshtml
@@ -73,6 +73,14 @@
         }
 
     </script>
+    <h2 style="text-align:center;">
+        <br /><br />
+        <div class="text-center">
+            <a href="/Cart/CurrentCart" class="btn btn-primary mx-2">Current Cart</a>
+            <a href="/Cart/Select" class="btn btn-primary mx-2">Select / Delete List</a>
+            <a href="/" class="btn btn-primary mx-2">Add Item</a>
+        </div>
+    </h2>
     <div class="container">
         <main role="main" class="pb-3">
             <h2 style="text-align:center">Saved Lists</h2> <!-- Updated title here -->
